--- a/data_pipeline/docker/docker_compose_etl.yaml
+++ b/data_pipeline/docker/docker_compose_etl.yaml
@@ -44,6 +44,7 @@ services:
     image: python:3.11
     volumes:
       - jigsaw_data:/data
+      - ../scripts/split_by_timestamp.py:/data/Jigsaw/split_by_timestamp.py:ro
     working_dir: /data/Jigsaw
     command:
       - bash
@@ -52,25 +53,8 @@ services:
         set -e
         pip install pandas scikit-learn
 
-        echo "Splitting dataset by timestamp..."
-        python3 <<EOF
-import pandas as pd
-from sklearn.model_selection import train_test_split
-
-df = pd.read_csv("train.csv", usecols=["comment_text", "target", "created_date"])
-df["created_date"] = pd.to_datetime(df["created_date"])
-df = df.sort_values("created_date")
-
-split_index = int(len(df) * 0.9)
-train_val = df.iloc[:split_index]
-production = df.iloc[split_index:]
-
-train, val = train_test_split(train_val, test_size=0.1111, random_state=42)
-
-train.to_csv("train.csv", index=False)
-val.to_csv("val.csv", index=False)
-production.to_csv("production.csv", index=False)
-EOF
+        echo "Running timestamp-based split script..."
+        python3 split_by_timestamp.py
 
         echo "Done splitting. Final files:"
         ls -l
