--- a/model_serving/requirements.txt
+++ b/model_serving/requirements.txt
@@ -1,1 +1,7 @@
-
+numpy
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+flask
+torch
+transformers
