--- a/iac/k8s/staging/Chart.yaml
+++ b/iac/k8s/staging/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
-name: gourmetgram-staging
+name: content-moderation-staging
 version: 1.0.0
-description: Gourmetgram Staging Deployment
-
+description: Content Moderation Inference Service - Staging Deployment
