--- a/iac/k8s/staging/values.yaml
+++ b/iac/k8s/staging/values.yaml
@@ -1,12 +1,12 @@
 replicaCount: 1
 
 image:
-  repository: registry.kube-system.svc.cluster.local:5000/gourmetgram-app
+  repository: registry.kube-system.svc.cluster.local:5000/content-moderation-api
   tag: staging-1.0.0
 
 service:
-  port: 8081
-  externalIP: ""   # Placeholder
+  port: 8000
+  externalIP: ""
 
 resources:
   limits:
@@ -15,4 +15,3 @@ resources:
   requests:
     cpu: "200m"
     memory: "128Mi"
-
