--- a/iac/k8s/staging/templates/gourmetgram-app.yaml
+++ b/iac/k8s/staging/templates/gourmetgram-app.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gourmetgram-app
-  namespace: gourmetgram-staging
+  name: content-moderation-api
+  namespace: content-moderation-staging
 
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: gourmetgram-app
+      app: content-moderation-api
   template:
     metadata:
       labels:
-        app: gourmetgram-app
+        app: content-moderation-api
     spec:
       containers:
-        - name: gourmetgram-app
+        - name: content-moderation-api
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 8000
@@ -27,14 +27,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: gourmetgram-app
-  namespace: gourmetgram-staging
+  name: content-moderation-api
+  namespace: content-moderation-staging
 spec:
   selector:
-    app: gourmetgram-app
+    app: content-moderation-api
   ports:
     - port: {{ .Values.service.port }}
       targetPort: 8000
   externalIPs:
     - {{ .Values.service.externalIP }}
-
