--- a/iac/k8s/canary/Chart.yaml
+++ b/iac/k8s/canary/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
-name: gourmetgram-canary
+name: content-moderation-canary
 version: 1.0.0
-description: Gourmetgram Canary Deployment
-
+description: Content Moderation Inference Service - Canary Deployment
