--- a/iac/k8s/platform/templates/postgres.yaml
+++ b/iac/k8s/platform/templates/postgres.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: gourmetgram-platform
+  namespace: content-moderation-platform
 spec:
   accessModes:
     - ReadWriteOnce
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: gourmetgram-platform
+  namespace: content-moderation-platform
 spec:
   replicas: 1
   selector:
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: gourmetgram-platform
+  namespace: content-moderation-platform
 spec:
   selector:
     app: postgres
