--- a/iac/ansible/argocd/argocd_add_prod.yml
+++ b/iac/ansible/argocd/argocd_add_prod.yml
@@ -1,11 +1,11 @@
 ---
-- name: Deploy Gourmetgram Production via ArgoCD & Helm
+- name: Deploy Content Moderation Production via ArgoCD & Helm
   hosts: node1
   become: yes
   vars:
-    app_name: gourmetgram-production
-    repo_url: https://github.com/teaching-on-testbeds/gourmetgram-iac.git
-    app_path: k8s/production
+    app_name: content-moderation-production
+    repo_url: https://github.com/revforyou/Content_Moderation_System.git
+    app_path: iac/k8s/production
     argocd_namespace: argocd
 
   tasks:
@@ -31,8 +31,8 @@
       set_fact:
         external_ip: "{{ ansible_all_ipv4_addresses | select('match', '^10\\.56\\..*') | list | first }}"
 
-    - name: Create gourmetgram-production namespace if missing
-      command: kubectl create namespace gourmetgram-production
+    - name: Create content-moderation-production namespace if missing
+      command: kubectl create namespace content-moderation-production
       register: ns_create
       failed_when: ns_create.rc != 0 and "AlreadyExists" not in ns_create.stderr
       changed_when: "'created' in ns_create.stdout"
