--- a/iac/ansible/argocd/workflow_build_init.yml
+++ b/iac/ansible/argocd/workflow_build_init.yml
@@ -2,31 +2,14 @@
   hosts: node1
   become: yes
   vars:
-    repo_url: https://github.com/teaching-on-testbeds/gourmetgram-iac.git
-    repo_dest: /tmp/gourmetgram-iac
+    repo_url: https://github.com/revforyou/Content_Moderation_System.git
+    repo_dest: /tmp/content-moderation-iac
     workflow_file: workflows/build-initial.yaml   
     workflow_name: build-initial
     argo_namespace: argo
 
   tasks:
-    - name: Clone or update gourmetgram-iac repo
-      git:
-        repo: "{{ repo_url }}"
-        dest: "{{ repo_dest }}"
-        version: main   
-
-- name: Run Argo Workflow from GitHub Repo
-  hosts: node1
-  become: yes
-  vars:
-    repo_url: https://github.com/teaching-on-testbeds/gourmetgram-iac.git
-    repo_dest: /tmp/gourmetgram-iac
-    workflow_file: workflows/build-initial.yaml   
-    workflow_name: build-initial
-    argo_namespace: argo
-
-  tasks:
-    - name: Clone or update gourmetgram-iac repo
+    - name: Clone or update content-moderation-iac repo
       git:
         repo: "{{ repo_url }}"
         dest: "{{ repo_dest }}"
