--- a/iac/ansible/general/hello_host.yml
+++ b/iac/ansible/general/hello_host.yml
@@ -1,5 +1,5 @@
 ---
-- name: Hello, world - use Ansible to run a command on each host
+- name: Hello from Content Moderation nodes
   hosts: all
   gather_facts: no
 
@@ -11,4 +11,3 @@
     - name: Show hostname output
       debug:
         msg: "The hostname of {{ inventory_hostname }} is {{ hostname_output.stdout }}"
-
