--- a/iac/workflows/build-initial.yaml
+++ b/iac/workflows/build-initial.yaml
@@ -32,7 +32,7 @@ spec:
 
           while [ $i -le $MAX_RETRIES ]; do
             echo "Attempt $i of $MAX_RETRIES: Cloning repo..."
-            git clone --branch master https://github.com/teaching-on-testbeds/gourmetgram.git /mnt/workspace && break
+            git clone --branch main https://github.com/revforyou/Content_Moderation_System.git /mnt/workspace && break
             echo "Git clone failed. Retrying in 5 seconds..."
             i=$((i + 1))
             sleep 5
@@ -52,11 +52,10 @@ spec:
       args:
         - --dockerfile=/mnt/workspace/Dockerfile
         - --context=/mnt/workspace
-        - --destination=registry.kube-system.svc.cluster.local:5000/gourmetgram-app:staging-1.0.0
-        - --destination=registry.kube-system.svc.cluster.local:5000/gourmetgram-app:canary-1.0.0
-        - --destination=registry.kube-system.svc.cluster.local:5000/gourmetgram-app:production-1.0.0
+        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:staging-1.0.0
+        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:canary-1.0.0
+        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:production-1.0.0
         - --insecure
       volumeMounts:
         - name: workdir
           mountPath: /mnt/workspace
-
