--- a/Model Training/docker-compose.yaml
+++ b/Model Training/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - /mnt/block-persist:/home/jovyan/work  # mount your Chameleon volume
+      - /home/cc/Content_Moderation_System/Model Training:/home/jovyan/work
     deploy:
       resources:
         reservations:
@@ -17,4 +17,5 @@ services:
               capabilities: [gpu]
     environment:
       - JUPYTER_ENABLE_LAB=yes
-    command: start-notebook.sh
+    command: >
+       bash -c "python3 -m pip install torch pandas mlflow && start-notebook.sh"
