--- a/iac/workflows/build-initial.yaml
+++ b/iac/workflows/build-initial.yaml
@@ -50,11 +50,9 @@ spec:
     container:
       image: gcr.io/kaniko-project/executor:latest
       args:
-        - --dockerfile=/mnt/workspace/Dockerfile
-        - --context=/mnt/workspace
-        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:staging-1.0.0
-        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:canary-1.0.0
-        - --destination=registry.kube-system.svc.cluster.local:5000/moderation-app:production-1.0.0
+        - --dockerfile=/mnt/workspace/model_serving/Dockerfile
+        - --context=/mnt/workspace/model_serving/
+        - --destination=registry.kube-system.svc.cluster.local:5000/content-moderation-app:staging-1.0.0
         - --insecure
       volumeMounts:
         - name: workdir
